refactor: simplify backend code for clarity and consistency
- SecurityConfig: extract shared authorization rules into helper method,
  eliminate ~50 lines of duplication between dev/prod branches
- GlobalExceptionHandler: extract buildResponse helper, modernize to .toList()
- EncryptionConverter: proper imports, narrow catch to GeneralSecurityException
- OwnershipVerifier: extract shared auth call, null-safe constant-on-left
- MeasureController: extract filterReportsByCurrentUser, replace 14 inline
  FQNs with imports, use OwnershipVerifier consistently
- CqlController: replace FQNs with imports, use OwnershipVerifier for user
- AuthoringController: replace FQNs with imports, consistent patterns

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>