@@ -13,7 +13,6 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 @Slf4j
@@ -21,99 +20,70 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(CqlTranslationException.class)
     public ResponseEntity<ErrorResponse> handleCqlTranslationException(CqlTranslationException ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .timestamp(LocalDateTime.now())
-                .status(HttpStatus.BAD_REQUEST.value())
-                .error("CQL Translation Error")
-                .message(ex.getMessage())
-                .details(ex.getErrors().stream()
-                        .map(e -> e.getMessage())
-                        .collect(Collectors.toList()))
-                .build();
-        return ResponseEntity.badRequest().body(response);
+        List<String> details = ex.getErrors().stream()
+                .map(e -> e.getMessage())
+                .toList();
+        return buildResponse(HttpStatus.BAD_REQUEST, "CQL Translation Error", ex.getMessage(), details);
     }
 
     @ExceptionHandler(CqlExecutionException.class)
     public ResponseEntity<ErrorResponse> handleCqlExecutionException(CqlExecutionException ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .timestamp(LocalDateTime.now())
-                .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
-                .error("CQL Execution Error")
-                .message(ex.getMessage())
-                .build();
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
+        return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "CQL Execution Error", ex.getMessage());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex) {
         List<String> errors = ex.getBindingResult().getFieldErrors().stream()
                 .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .collect(Collectors.toList());
-
-        ErrorResponse response = ErrorResponse.builder()
-                .timestamp(LocalDateTime.now())
-                .status(HttpStatus.BAD_REQUEST.value())
-                .error("Validation Error")
-                .message("Invalid request parameters")
-                .details(errors)
-                .build();
-        return ResponseEntity.badRequest().body(response);
+                .toList();
+        return buildResponse(HttpStatus.BAD_REQUEST, "Validation Error", "Invalid request parameters", errors);
     }
 
     @ExceptionHandler(FhirServerUnavailableException.class)
     public ResponseEntity<ErrorResponse> handleFhirServerUnavailableException(FhirServerUnavailableException ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .timestamp(LocalDateTime.now())
-                .status(HttpStatus.SERVICE_UNAVAILABLE.value())
-                .error("FHIR Server Unavailable")
-                .message(ex.getMessage())
-                .build();
-        return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(response);
+        return buildResponse(HttpStatus.SERVICE_UNAVAILABLE, "FHIR Server Unavailable", ex.getMessage());
     }
 
     @ExceptionHandler(CallNotPermittedException.class)
     public ResponseEntity<ErrorResponse> handleCircuitBreakerOpenException(CallNotPermittedException ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .timestamp(LocalDateTime.now())
-                .status(HttpStatus.SERVICE_UNAVAILABLE.value())
-                .error("Service Circuit Breaker Open")
-                .message("FHIR service is temporarily unavailable due to repeated failures. Please try again later.")
-                .build();
-        return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(response);
+        return buildResponse(HttpStatus.SERVICE_UNAVAILABLE, "Service Circuit Breaker Open",
+                "FHIR service is temporarily unavailable due to repeated failures. Please try again later.");
     }
 
     @ExceptionHandler(AccessDeniedException.class)
     public ResponseEntity<ErrorResponse> handleAccessDeniedException(AccessDeniedException ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .timestamp(LocalDateTime.now())
-                .status(HttpStatus.FORBIDDEN.value())
-                .error("Access Denied")
-                .message(ex.getMessage() != null ? ex.getMessage() : "You do not have permission to perform this action.")
-                .build();
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(response);
+        String message = ex.getMessage() != null
+                ? ex.getMessage()
+                : "You do not have permission to perform this action.";
+        return buildResponse(HttpStatus.FORBIDDEN, "Access Denied", message);
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
     public ResponseEntity<ErrorResponse> handleIllegalArgumentException(IllegalArgumentException ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .timestamp(LocalDateTime.now())
-                .status(HttpStatus.BAD_REQUEST.value())
-                .error("Bad Request")
-                .message(ex.getMessage())
-                .build();
-        return ResponseEntity.badRequest().body(response);
+        return buildResponse(HttpStatus.BAD_REQUEST, "Bad Request", ex.getMessage());
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ErrorResponse> handleGenericException(Exception ex) {
         log.error("Unhandled exception", ex);
+        return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Internal Server Error",
+                "An internal error occurred. Please contact support.");
+    }
+
+    private ResponseEntity<ErrorResponse> buildResponse(HttpStatus status, String error, String message) {
+        return buildResponse(status, error, message, null);
+    }
+
+    private ResponseEntity<ErrorResponse> buildResponse(HttpStatus status, String error, String message,
+                                                         List<String> details) {
         ErrorResponse response = ErrorResponse.builder()
                 .timestamp(LocalDateTime.now())
-                .status(HttpStatus.INTERNAL_SERVER_ERROR.value())
-                .error("Internal Server Error")
-                .message("An internal error occurred. Please contact support.")
+                .status(status.value())
+                .error(error)
+                .message(message)
+                .details(details)
                 .build();
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(response);
+        return ResponseEntity.status(status).body(response);
     }
 
     @Data
